# the-last-algorithms-course

./: README.md
dart/lib/: graph.dart  heap.dart
dart/test/: graph_test.dart  heap_test.dart
python/: array-test.py  pyproject.toml
python/src/algorithms/: __init__.py  binary_search.py  bubble_sort.py  doubly_linked_list.py  heap.py  linear_search.py  maze_solver.py  queue.py  quick_sort.py  search_crystal_balls.py  stack.py  tree.py
python/tests/: test_binary_search.py  test_bubble_sort.py  test_crystal_balls.py  test_doubly_linked_list.py  test_heap.py  test_linear_search.py  test_maze_solver.py  test_queue.py  test_quick_sort.py  test_stack.py  test_tree.py
